--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,13 @@ services:
       context: ./back
       dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - "127.0.0.1:5000:5000"
     depends_on:
       - db
     env_file:
       - ./back/.env
     networks:
-      - camagru
+      - camagru-network
 
   front:
     build:
@@ -18,20 +18,21 @@ services:
     ports:
       - "8080:80"
     networks:
-      - camagru
+      - camagru-network
   db:
     image: postgres:14
     networks:
       - camagru
-    # ports:
-    #   - "5432:5432"
-    # env_file:
-    #   - ./back/.env
-    # volumes:
-    #   - pgdata:/usr/src/pgdata/data
+    ports:
+      - "5432:5432"
+    env_file:
+      - ./back/.env
+    volumes:
+      - pgdata:/usr/src/pgdata/data
 
 volumes:
   pgdata:
 
 networks:
-  camagru:
+  camagru-network:
+    driver: bridge
