--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-      working-directory: ./back
 
+    -name: Change Directory
+      run: cd back
+      
     - name: Install Dependencies
       run: |
         if [ -f package-lock.json ]; then
