--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,8 +29,8 @@ jobs:
         cache: 'npm'
 
     -name: Change Directory
-      run: cd back
-      
+    working-directory: ./back
+
     - name: Install Dependencies
       run: |
         if [ -f package-lock.json ]; then
