--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,11 +28,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
 
-    -name: Change Directory
-    working-directory: ./back
-
     - name: Install Dependencies
       run: |
+        cd back
         if [ -f package-lock.json ]; then
           npm ci
         else
