--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,12 +1,9 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
   push:
     branches:
-     - "*"
+     - "**"  # Match all branches
   pull_request:
     branches: [ "master" ]
 
@@ -18,17 +15,17 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
 
-    - name: Install Dependencies
+    - name: Install, Build, and Test
       run: |
         cd back
         if [ -f package-lock.json ]; then
@@ -36,6 +33,5 @@ jobs:
         else
           npm install
         fi
-    
-    - run: npm run build --if-present
-    - run: npm test
+        npm run build --if-present
+        npm test
