--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -108,6 +108,10 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "test/**/*.ts"
+    "src/**/*.ts",                          
+    "test/**/*.ts"                
+  ],
+  "exclude": [
+    "node_modules"                         
   ]
 }
