--- a/back/package.json
+++ b/back/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "tsc --noEmit && jest --watchAll",
+    "test": "tsc --noEmit && jest",
     "build": "tsc",
     "start": "node dist/index.js"
   },
