#2 setup infra and GitHub actions (#5)
* WIP

* WI

* WIP

* WIP

* WIP

* fix: fixed github actions workflow

* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* Update node.js.yml

* WIP

* Update package.json

---------

Co-authored-by: Facinet Kouyate <fakouyat@made-f0Ar5s1.clusters.42paris.fr>
Co-authored-by: Facinet Kouyate <fakouyat@made-f0Ar5s2.clusters.42paris.fr>

--- a/back/package.json
+++ b/back/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "tsc --noEmit && jest",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
