--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -108,9 +108,9 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/**/*.ts",                          
-    "test/**/*.ts"                
-  ],
+    "./src/**/*.ts",                          
+    "/test/**/*.ts"                
+, "index.ts"  ],
   "exclude": [
     "node_modules"                         
   ]
