--- a/back/package.json
+++ b/back/package.json
@@ -16,8 +16,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.5",
+    "@types/pg": "^8.11.10",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "pg": "^8.13.0"
   }
 }
