--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,9 @@ services:
   front:
     build:
       context: ./front
+      dockerfile: Dockerfile
     ports:
-      - "8080:80"
+      - "127.0.0.1:3000:80"
     networks:
       - camagru-network
 
