--- a/front/config/nginx.conf
+++ b/front/config/nginx.conf
@@ -6,8 +6,13 @@ server {
 
     index index.html;
 
+
     location / {
         try_files $uri $uri/ /index.html;
+    }
+
+    location /api/v1/ {
+        proxy_pass http://back:5000;
     }
     
     location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
