--- a/back/package.json
+++ b/back/package.json
@@ -16,7 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/jest": "^29.5.13",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.7.5",
     "@types/pg": "^8.11.10",
     "jest": "^29.7.0",
@@ -24,7 +25,9 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "@sendgrid/mail": "^8.1.4",
+    "crypto": "^1.0.1",
+    "mailgun.js": "^10.2.3",
     "pg": "^8.13.0"
   }
 }
