feat(user-auth): implemented user registration process

--- a/front/config/nginx.conf
+++ b/front/config/nginx.conf
@@ -6,9 +6,12 @@ server {
 
     index index.html;
 
-
     location / {
         try_files $uri $uri/ /index.html;
+    }
+
+    location ~* ^/activate/(.*\.js)$ {
+        rewrite ^/activate/(.*\.js)$ /$1 break;
     }
 
     location /api/v1/ {
