--- a/front/config/nginx.conf
+++ b/front/config/nginx.conf
@@ -6,9 +6,12 @@ server {
 
     index index.html;
 
-
     location / {
         try_files $uri $uri/ /index.html;
+    }
+
+    location ~* ^/activate/(.*\.js)$ {
+        rewrite ^/activate/(.*\.js)$ /$1 break;
     }
 
     location /api/v1/ {
@@ -18,4 +21,5 @@ server {
     location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
         try_files $uri =404;
     }
+
 }
