--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_NAME=camagurudb
 DB_USER=admin
 SEND_GRID_MAIL_API_KEY='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'  
 SEND_GRID_MAIL_SENDER ='alt.eq-5ourg8f8@yopmail.com'
+API_AUTHORIZATION_TOKEN='my wonderfull_bearer_token_12//£*XXX'
