--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       - "127.0.0.1:3000:80"
     networks:
       - camagru-network
+    environment:
+      -API_AUTHORIZATION_TOKEN: ${API_AUTHORIZATION_TOKEN}
 
 volumes:
   pgdata:
